[package]
name = "slotmap"
version = "1.0.7"  # Remember to grep and update version everywhere.
edition = "2018"
authors = ["Orson Peters <orsonpeters@gmail.com>"]
description = "Slotmap data structure"
license = "Zlib"
repository = "https://github.com/orlp/slotmap"
readme = "README.md"
keywords = ["slotmap", "storage", "allocator", "arena", "reference"]
categories = ["data-structures", "memory-management", "caching"]

[features]
default = ["std"]
unstable = []
std = []
unstable__borsh_schema = ["borsh/unstable__schema"]
unstable__borsh_async = ["borsh/unstable__async"]

[dependencies]

[dependencies.serde]
version = "1.0"
optional = true
default-features = false
features = ["derive", "alloc"]

[dependencies.borsh]
git = "https://github.com/DanikVitek/borsh-rs.git"
rev = "a13066ca7bb1787da96da424e7624dff59c1a829"
optional = true
default-features = false
features = ["derive"]

[dev-dependencies]
fxhash = "0.2.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
quickcheck = "0.9"

[build-dependencies]
version_check = "0.9"
